--- a/pages/components.html
+++ b/pages/components.html
@@ -40,21 +40,21 @@ permalink: /components
         <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
           <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">च</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ॵ</span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Heet</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">च</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">फ</span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Brandbaar</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000; color: #FFF;">च</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000; color: #FFF;">ॲ</span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Huidopname</span>
             </div>
           </div>
