--- a/pages/components.html
+++ b/pages/components.html
@@ -13,19 +13,19 @@ permalink: /components
         <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
           <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">Low</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">Low</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">Moderate</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">Moderate</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000; color: #FFF;">Hight</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000;">Hight</span>
             </div>
           </div>
         </div>
@@ -40,21 +40,21 @@ permalink: /components
         <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
           <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ॵ</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ॵ</span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Heet</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">फ</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000;">फ</span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Brandbaar</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000; color: #FFF;">ॲ</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000;">ॲ</span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Huidopname</span>
             </div>
           </div>
@@ -70,21 +70,21 @@ permalink: /components
         <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
           <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;"></span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;"></span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;"></span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;"></span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
             </div>
           </div>
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000; color: #FFF;"></span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000;"></span>
               <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Finished</span>
             </div>
           </div>
@@ -122,7 +122,7 @@ permalink: /components
       <div class="pmx-selector MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-1">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">܌</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">܌</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field JS_pmx-selector__blockPart--label">Not started</span>
           </div>
         </div>
@@ -140,17 +140,17 @@ permalink: /components
       <div class="pmx-selector JS_selector" data-popid="#multiSelector-tagpicker">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
 
             <div class="pmx-selector__itemSeperator"></div>
 
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
 
             <div class="pmx-selector__itemSeperator"></div>
 
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">297</span>
           </div>
         </div>
@@ -169,21 +169,21 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--multiselect JS_selector">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">dev-team</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">297</span>
           </div>
         </div>
@@ -201,21 +201,21 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">च</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">च</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ण</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ण</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
         <div class="pmx-selector__item JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ऒ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ऒ</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Done</span>
           </div>
         </div>
@@ -350,14 +350,14 @@ permalink: /components
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
           </div>
         </div>
@@ -371,14 +371,14 @@ permalink: /components
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
@@ -397,7 +397,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
         <div class="pmx-selector__item">
           <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ބ</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ބ</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Label</span>
             <span class="pmx-selector__blockSeperator"></span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Field Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
