--- a/pages/components.html
+++ b/pages/components.html
@@ -340,7 +340,7 @@ permalink: /components
   </div>
 </div>
 
-<h2>Fitler</h2>
+<h2>Filter</h2>
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
