--- a/pages/components.html
+++ b/pages/components.html
@@ -99,7 +99,7 @@ permalink: /components
 
 <div class="pmx-field">
   <div class="pmx-field__inner">
-    <div class="pmx-field__label">Danger level</div>
+    <div class="pmx-field__label">Due date</div>
     <div class="pmx-field__value">
 
       <div class="pmx-selector JS_selector">
@@ -137,7 +137,7 @@ permalink: /components
     <div class="pmx-field__label">Tags</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector JS_selector" data-popid="#multiSelector-tagpicker">
+      <div class="pmx-selector MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-tagpicker">
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
