--- a/pages/components.html
+++ b/pages/components.html
@@ -363,7 +363,7 @@ permalink: /components
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
