--- a/pages/filter.html
+++ b/pages/filter.html
@@ -10,18 +10,14 @@ permalink: /filter
     <div class="pmx-field__label">Date | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Include</span>
-        </div>
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">next week (12/03/18-18/03/18)</span>
           </div>
         </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">And</span>
-        </div>
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</span>
@@ -29,24 +25,18 @@ permalink: /filter
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
-        </div>
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">today</span>
           </div>
         </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</span>
@@ -63,49 +53,39 @@ permalink: /filter
     <div class="pmx-field__label">Tags | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Include</span>
-        </div>
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #00BFFF;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</span>
           </div>
         </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">And</span>
-        </div>
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">And</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</span>
           </div>
         </div>
       </div>
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
       </div>
 
-      <div class="pmx-selector pmx-selector--readonly JS_selector">
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Exclude</span>
-        </div>
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Exclude</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">front-end</span>
           </div>
         </div>
-        <div class="pmx-selector__itemSeperator">
-          <span class="pmx-selector__itemSeperatorLabel">Or</span>
-        </div>
+        <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Or</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16; color: #FFF;">ग़</span>
+            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</span>
             <span class="pmx-selector__blockPart pmx-selector__blockPart--field">back-end</span>
           </div>
         </div>
