--- a/pages/components.html
+++ b/pages/components.html
@@ -25,7 +25,7 @@ permalink: /components
           <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block ">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000;">Hight</span>
+              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #FF0000;">High</span>
             </div>
           </div>
         </div>
