--- a/pages/tag-picker.html
+++ b/pages/tag-picker.html
@@ -4,36 +4,25 @@ title: Tag-picker
 permalink: /tag
 ---
 
-<div class="field-container">
-  <div class="field">
-    <div class="field__label">Tags</div>
-    <div class="field__value">
+<div class="pmx-field">
+  <div class="pmx-field__label">Tags</div>
+  <div class="pmx-field__value">
 
-      <div class="pmx-selector  JS_selector pmx-selector--collapsed pmx-selector--multiselect MULTISELECT__POPUP" data-popid="#multiSelector-tagpicker">
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #0bda51;">ग़</span>
-            <span class="pmx-selector__blockSeperator">•</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">282</span>
-          </div>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #f4ca16;">ग़</span>
-            <span class="pmx-selector__blockSeperator">•</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">2013_Maintenance</span>
-          </div>
-        </div>
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block">
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="color: #e30022;">ग़</span>
-            <span class="pmx-selector__blockSeperator">•</span>
-            <span class="pmx-selector__blockPart pmx-selector__blockPart--field">workaround_available</span>
-          </div>
+    <div class="pmx-selector pmx-selector--multiselect MULTISELECT__POPUP JS_selector" data-popid="#multiSelector-tagpicker">
+      <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__block">
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #0BDA51;">ग़</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--field">282</div>
+          <div class="pmx-selector__itemSeperator"></div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #F4CA16;">ग़</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--field">2013_Maintenance</div>
+          <div class="pmx-selector__itemSeperator"></div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix" style="background-color: #E30022;">ग़</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--field">workaround_available</div>
         </div>
       </div>
-
     </div>
+
   </div>
 </div>
 
