--- a/pages/filter.html
+++ b/pages/filter.html
@@ -11,7 +11,7 @@ permalink: /filter
     <div class="pmx-field__label">Tags | Filter</div>
     <div class="pmx-field__value">
 
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly JS_selector">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly MULTISELECT__POPUP JS_selector" data-popid="#filter-tagpicker">
         <div class="pmx-selector__itemSeperator pmx-selector__itemSeperator--hasLabel">Include</div>
         <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
           <div class="pmx-selector__block ">
